fix some overflow issues

--- a/crew.css
+++ b/crew.css
@@ -238,14 +238,12 @@ body {
     margin: 0 auto;
     width: 100vw;
     padding: 0;
-    overflow-x: hidden;
   }
 
   .meet-crew {
     margin: 50px auto 0px 0px;
     font-size: 16px;
     text-align: center;
-
     width: 100vw;
     padding-left: 15%;
     margin-bottom: 1rem;
