--- a/technology.css
+++ b/technology.css
@@ -111,7 +111,6 @@ body {
     position: absolute;
     left: 0;
     right: 0;
-    overflow-x: hidden;
     overflow-y: scroll;
   }
 
